--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,6 +2,15 @@ backend:
   name: git-gateway
   branch: main
 collections:
+  - name: "blog" # Used in routes, e.g., /admin/collections/blog
+    label: "Blog" # Used in the UI
+    folder: "static/posts" # The path to the folder where our blog posts are stored
+    identifier_field: "slug"
+    create: true # Allow users to create new documents in this collection
+    fields: # The fields for each document
+      - { label: "Slug", name: "slug", widget: "string" }
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Body", name: "body", widget: "markdown" }
   - name: routes
     label: routes
     folder: src/routes
