--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
 		"vite": "^3.2.4",
 		"vitest": "^0.25.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"gray-matter": "^4.0.3",
+		"marked": "^4.2.3"
+	}
 }
